[package]
name = "archery-minigame"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy_dylib = { version = "0.14.2" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
